# okku-server

./: .env.sample  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
client/: .gitignore  package.json
client/src/: main.ts
client/src/utils/: input.ts  log.ts  login.ts  me.ts  ws.ts
docs/: browser-requests.md  curl-requests.md
docs/qdb/: entities.qdb
docs/qdbd/: entities.qdbd
lib/typescript/: .eslintignore
lib/typescript/src/: main.ts
migrations/: 20201224034535_users.sql  20201224034607_secrets.sql  20201224034624_avatars.sql  20201224145009_images.sql  20201226155240_avatars.sql  20210104234853_files.sql  20210106000352_avatars.sql  20210108020656_profiles.sql  20210121221013_chats.sql  20210121221018_messages.sql  20210121221024_chats_users.sql
sql/: fetch_chat_messages.sql  fetch_user_chats.sql
src/: client.rs  error.rs  hub.rs  main.rs  server.rs
src/application/service/: auth.rs  avatar.rs  chat.rs  file.rs  hub.rs  mod.rs  profile.rs  secret.rs  user.rs
src/application/service/auth/: service.rs
src/application/service/secret/: entity.rs  service.rs
src/database/: init.sql  mod.rs
src/domain/: mod.rs
src/domain/auth/: service.rs
src/domain/avatar/: entity.rs  repository.rs  service.rs
src/domain/chat/: mod.rs  repository.rs  service.rs
src/domain/chat/dto/: history_message.rs  (+3 more)
src/domain/file/: repository.rs  service.rs
src/domain/profile/: entity.rs  repository.rs  service.rs
src/domain/secret/: entity.rs  repository.rs  service.rs
src/domain/user/: entity.rs  mod.rs  repository.rs  service.rs
src/error/: mod.rs
src/handler/: auth.rs  health.rs  image.rs  mod.rs  user.rs
src/infrastructure/: database.rs
src/infrastructure/repository/: base.rs  mod.rs
src/middleware/: authorization.rs  mod.rs  service.rs
src/model/: avatar.rs  feed.rs  image.rs  message.rs  mod.rs  secret.rs  user.rs
src/proto/: input.rs  mod.rs  output.rs  parcel.rs
src/server/: http.rs  http_response.rs  mod.rs
src/server/handler/: auth.rs  health.rs  mod.rs  rejection.rs  user.rs
src/server/middleware/: mod.rs  with_authorization.rs  with_service.rs
src/server/utils/: file.rs  mod.rs  response.rs
src/service/: auth.rs  avatar.rs  image.rs  mod.rs  url.rs  user.rs
src/service/chat/: client.rs
src/utils/: security.rs
(+61 files in other folders)
