[package]
name = "msend-server"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3"
http-auth-basic = "0.1"
jsonwebtoken = "7"
lazy_static = "1"
log = "0.4"
mobc = "0.5"
mobc-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.7"
rust-argon2 = "0.8"
thiserror = "1"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"