[package]
name = "msend-server"
version = "0.6.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2"
async-trait = "0.1"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3"
http-auth-basic = "0.1"
image = "0.23"
jsonwebtoken = "7"
lazy_static = "1"
log = "0.4"
rand = "0.7"
regex = "1"
rust-argon2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.4", features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1"
tree_magic = "0.2"
tokio = { version = "0.2", features = ["full"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
